--- a/src/main/resources/templates/User/userInfo.html
+++ b/src/main/resources/templates/User/userInfo.html
@@ -8,19 +8,24 @@
 
 
 <div th:object="${user}">
-    <div class="container">
         <div class="row">
 <div class="col-sm-10 col-sm-offset-1">
     <h1 th:text="'All About: ' + ${username}">User Information</h1>
 </div>
         </div>
-        <div class="row">
+
+    <div class="row">
 <div class="col-sm-12">
     <hr />
 </div>
         </div>
-        <div class="row">
-<div class="col-sm-4 col-sm-offset-2">
+
+    <div class="container">
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="col-sm-offset-1">
+
     <table class="table">
         <tr>
             <th>First Name</th>
@@ -43,20 +48,40 @@
             <td th:text="*{address}"></td>
         </tr>
     </table>
-</div>
+
 
 <br />
+                <a th:href="@{'/home/editInfo/'+ ${username}}"><button type="button" class="login-button form-control">
+        Edit Information</button></a>
+        </div>
+        </div>
 
-    <button type="button" class="login-button form-control">
-        <a th:href="@{'/home/editInfo/'+ ${username}}">Edit Information</a></button>
+        <div class="col-sm-5">
+            <div class="col-sm-offset-1">
+
+
+                <iframe th:src="@{'https://www.google.com/maps/embed/v1/place?key=AIzaSyDzT-X3rQbnEEA1BtfBrifYqeQiQ0giYJs&amp;q=' + *{address}}"
+                        width="400" height="300" frameborder="0" style="border:0" ></iframe>
+
+
+
+
+
+
+            </div>
+        </div>
     </div>
 
 
 
 </div>
+
+
+
+
+
+
 </div>
-
-
 
 
 </body>
