--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -38,8 +38,14 @@ h1 {
 font-family: 'Bitter', serif;
 }
 
-.userData td {
-    text-align:center;
+td {
+    text-align: center;
+    vertical-align: middle;
+}
+
+#userInfo {
+ height: 350px;
+ text-align: center;
 }
 
 
