--- a/src/main/resources/templates/User/commuteTime.html
+++ b/src/main/resources/templates/User/commuteTime.html
@@ -8,7 +8,7 @@
 
 <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
-            <h1 th:text="'Commute Time: ' + ${username} + ' to ' + ${place}">Commute</h1>
+            <h1 class="text-center" th:text="'Commute Time: ' + ${username} + ' to ' + ${place}">Commute</h1>
         </div>
 </div>
 
@@ -21,9 +21,9 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-sm-12 col-sm-offset-1 center">
+        <div class="col-sm-12">
                 <iframe th:src="@{'https://www.google.com/maps/embed/v1/directions?key=AIzaSyDzT-X3rQbnEEA1BtfBrifYqeQiQ0giYJs&amp;origin=' + ${userAddress} +'&amp;destination=' + ${appAddress} + '&amp;mode=driving'}"
-                        width="600" height="500" frameborder="0" style="border:0" ></iframe>
+                        class="center-block" width="700" height="400" frameborder="0" style="border:0" ></iframe>
 
 
 
