--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -3,64 +3,7 @@
 <head th:replace="fragments :: head">
 </head>
 <body>
-<div>
-    <script type="text/javascript">
-function sortTable(n) {
-  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-  table = document.getElementById("userApps");
-  switching = true;
-  // Set the sorting direction to ascending:
-  dir = "asc";
-  /* Make a loop that will continue until
-  no switching has been done: */
-  while (switching) {
-    // Start by saying: no switching is done:
-    switching = false;
-    rows = table.rows;
-    /* Loop through all table rows (except the
-    first, which contains table headers): */
-    for (i = 1; i &lt; (rows.length - 1); i++) {
-      // Start by saying there should be no switching:
-      shouldSwitch = false;
-      /* Get the two elements you want to compare,
-      one from current row and one from the next: */
-      x = rows[i].getElementsByTagName("TD")[n];
-      y = rows[i + 1].getElementsByTagName("TD")[n];
-      /* Check if the two rows should switch place,
-      based on the direction, asc or desc: */
-      if (dir == "asc") {
-        if (x.innerHTML.toLowerCase() &gt; y.innerHTML.toLowerCase()) {
-          // If so, mark as a switch and break the loop:
-          shouldSwitch = true;
-          break;
-        }
-      } else if (dir == "desc") {
-        if (x.innerHTML.toLowerCase() &lt; y.innerHTML.toLowerCase()) {
-          // If so, mark as a switch and break the loop:
-          shouldSwitch = true;
-          break;
-        }
-      }
-    }
-    if (shouldSwitch) {
-      /* If a switch has been marked, make the switch
-      and mark that a switch has been done: */
-      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-      switching = true;
-      // Each time a switch is done, increase this count by 1:
-      switchcount ++;
-    } else {
-      /* If no switching has been done AND the direction is "asc",
-      set the direction to "desc" and run the while loop again. */
-      if (switchcount == 0 &amp;&amp; dir == "asc") {
-        dir = "desc";
-        switching = true;
-      }
-    }
-  }
-}
-</script>
-</div>
+
 <nav th:replace="fragments :: user-navigation"></nav>
 
 
@@ -90,7 +33,7 @@ function sortTable(n) {
 
     <thead>
     <tr th:unless="${applist.isEmpty()}">
-        <th onclick="sortTable(0)">Position</th>
+        <th>Position</th>
         <th>Company/School</th>
         <th>Date</th>
         <th>Description</th>
@@ -109,8 +52,8 @@ function sortTable(n) {
 
 
     <tbody class="userData">
-    <tr th:each="app : ${applist}">
-        <td th:text="${app.name}"></td>
+    <tr th:each="app : ${applist}" >
+        <td th:text="${app.name}" ></td>
         <td th:text="${app.company}"></td>
         <td th:text="${app.date}"></td>
         <td th:text="${app.description}"></td>
