--- a/src/main/resources/templates/User/userInfo.html
+++ b/src/main/resources/templates/User/userInfo.html
@@ -10,7 +10,7 @@
 <div th:object="${user}">
         <div class="row">
 <div class="col-sm-10 col-sm-offset-1">
-    <h1 th:text="'All About: ' + ${username}">User Information</h1>
+    <h1 th:text="'All About: ' + ${username}" class="text-center">User Information</h1>
 </div>
         </div>
 
@@ -26,7 +26,7 @@
         <div class="col-sm-6">
             <div class="col-sm-offset-1">
 
-    <table class="table">
+    <table class="table" id="userInfo">
         <tr>
             <th>First Name</th>
             <td th:text="*{firstName}"></td>
@@ -51,8 +51,7 @@
 
 
 <br />
-                <a th:href="@{'/home/editInfo/'+ ${username}}"><button type="button" class="login-button form-control">
-        Edit Information</button></a>
+
         </div>
         </div>
 
@@ -61,7 +60,7 @@
 
 
                 <iframe th:src="@{'https://www.google.com/maps/embed/v1/place?key=AIzaSyDzT-X3rQbnEEA1BtfBrifYqeQiQ0giYJs&amp;q=' + *{address}}"
-                        width="400" height="300" frameborder="0" style="border:0" ></iframe>
+                        width="500" height="350" frameborder="0" style="border:0" ></iframe>
 
 
 
@@ -76,7 +75,12 @@
 
 </div>
 
-
+    <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+            <a th:href="@{'/home/editInfo/'+ ${username}}"><button type="button" class="login-button form-control">
+                Edit Information</button></a>
+        </div>
+    </div>
 
 
 
