Added spring security and password hashing w/ BCrypt method.

--- a/src/main/resources/templates/Login/login.html
+++ b/src/main/resources/templates/Login/login.html
@@ -35,8 +35,9 @@
     </div>
 
     <br />
+    <div class="col-sm-offset-2">
     <span th:text="${verifyError}" class="error"></span>
-
+    </div>
     <br />
     <div class="col-sm-2 col-sm-offset-2">
     <input type="submit" value="Login" class="login-button form-control" />
