--- a/src/main/resources/templates/Login/register.html
+++ b/src/main/resources/templates/Login/register.html
@@ -53,13 +53,22 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label th:for="${address}" class="control-label col-sm-2">Address:</label>
-        <div class="col-sm-4">
-        <input th:field="*{address}" class="form-control"/>
-        <span th:errors="*{address}" class="error"></span>
+
+        <div class="form-group">
+            <label th:for="${street}" class="control-label col-sm-2">Street:</label>
+            <div class="col-sm-4">
+                <input th:field="*{street}" class="form-control" placeholder="123 Abc St."/>
+                <span th:errors="*{street}" class="error"></span>
+            </div>
         </div>
-    </div>
+
+        <div class="form-group">
+            <label th:for="${cityStateZip}" class="control-label col-sm-2">City, State Zip:</label>
+            <div class="col-sm-4">
+                <input th:field="*{cityStateZip}" class="form-control" placeholder="New York City, NY 12345"/>
+                <span th:errors="*{cityStateZip}" class="error"></span>
+            </div>
+        </div>
 
     </div>
 
