--- a/src/main/resources/templates/User/addApp.html
+++ b/src/main/resources/templates/User/addApp.html
@@ -33,7 +33,7 @@
 
     <div class="form-group">
         <label th:for="${name}" class="control-label col-sm-2">Position:</label>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
         <input th:field="*{name}" class="form-control" th:value="${app.name}"/>
         <span th:errors="*{name}" class="error"></span>
         </div>
@@ -41,7 +41,7 @@
 
     <div class="form-group">
         <label th:for="${company}" class="control-label col-sm-2">Company/School:</label>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
         <input th:field="*{company}" class="form-control" th:value="${app.company}"/>
         <span th:errors="*{company}" class="error"></span>
         </div>
@@ -50,7 +50,7 @@
 
         <div class="form-group">
             <label th:for="${date}" class="control-label col-sm-2">Date:</label>
-            <div class="col-sm-4 ">
+            <div class="col-sm-5">
                 <div class="input-group date" id='datetime'>
                 <input th:field="*{date}" class="form-control" th:value="${app.date}"/>
                 <div class="input-group-addon">
@@ -70,7 +70,7 @@
 
     <div class="form-group">
         <label th:for="${description}" class="control-label col-sm-2">Description:</label>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
         <input th:field="*{description}" class="form-control" th:value="${app.description}"/>
         <span th:errors="*{description}" class="error"></span>
         </div>
@@ -78,23 +78,25 @@
 
     <div class="form-group">
         <label th:for="${location}" class="control-label col-sm-2">Location:</label>
-        <div class="col-sm-4">
-        <input th:field="*{location}" class="form-control" th:value="${app.location}"/>
+        <div class="col-sm-5">
+        <input th:field="*{location}" class="form-control" th:value="${app.location}"
+            placeholder="Please use full address for most accurate commute time"/>
         <span th:errors="*{location}" class="error"></span>
         </div>
     </div>
 
     <div class="form-group">
         <label th:for="${website}" class="control-label col-sm-2">Website Link:</label>
-        <div class="col-sm-4">
-        <input th:field="*{website}" class="form-control" th:value="${app.website}"/>
+        <div class="col-sm-5">
+        <input th:field="*{website}" class="form-control" th:value="${app.website}"
+               placeholder="Please copy and paste full application website here"/>
         <span th:errors="*{website}" class="error"></span>
         </div>
     </div>
 
     <div class="form-group">
         <label th:for="${notes}" class="control-label col-sm-2">Benefits/Notes:</label>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
         <input th:field="*{notes}" class="form-control" th:value="${app.notes}"/>
         <span th:errors="*{notes}" class="error"></span>
         </div>
@@ -102,7 +104,7 @@
 
     <div class="form-group">
         <label th:for="${salary}" class="control-label col-sm-2">Salary (Yearly):</label>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
         <select th:field="*{salary}" th:value="${app.salary}" class="form-control" >
         <option th:value="'Not Applicable'">Not Applicable</option>
         <option th:value="'0-20K'">0-20K</option>
@@ -122,7 +124,7 @@
 
     <div class="form-group">
         <label th:for="${phase}" class="control-label col-sm-2">Phase:</label>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
         <select th:field="*{phase}" th:value="${app.phase}" class="form-control">
             <option th:value="'Working on Application'">Working on Application</option>
             <option th:value="'Application Submitted'">Application Submitted</option>
