--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -16,7 +16,7 @@
 
 
 <div class="col-sm-10 col-sm-offset-1" th:unless="${appLists} and ${appLists.size()}">
-<p>No applications! Please start by adding an application using the Add App button above.</p>
+<p class="error">No applications! Please start by adding an application using the Add App button above.</p>
 </div>
 
 
