--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -20,6 +20,9 @@
 </div>
 
 
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+
+
 <form method="post" class="form-horizontal">
     <div class="col-sm-10 col-sm-offset-1">
 <table id="userApps" class="table table-hover"  th:each="applist : ${appLists}">
@@ -28,17 +31,16 @@
 
     <h4 th:unless="${applist.isEmpty()}" th:text="${applist[0].phase}">Table Header</h4>
 
-    <!--TODO: ATTEMPT TO SORT BY CLICKING ON HEADERS...JS? OR NEW HANDLERS?-->
-    <!--TODO: ATTEMPT TO COLOR CODE TABLES BY PHASE-->
+    <!--TODO: ATTEMPT TO COLOR CODE TABLES BY PHASE?-->
 
     <thead>
     <tr th:unless="${applist.isEmpty()}">
-        <th>Position</th>
-        <th>Company/School</th>
-        <th>Date</th>
-        <th>Description</th>
-        <th>Location</th>
-        <th>Salary</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(1)')" style="cursor:pointer">Position</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(2)')" style="cursor:pointer">Company/School</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(3)')" style="cursor:pointer">Date</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(4)')" style="cursor:pointer">Description</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(5)')" style="cursor:pointer">Location</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(6)')" style="cursor:pointer">Salary</th>
         <th>Phase</th>
         <th>Benefits/Notes</th>
         <th>Website Link</th>
@@ -52,7 +54,7 @@
 
 
     <tbody class="userData">
-    <tr th:each="app : ${applist}" >
+    <tr th:each="app : ${applist}" class="item" >
         <td th:text="${app.name}" ></td>
         <td th:text="${app.company}"></td>
         <td th:text="${app.date}"></td>
