Added ability to sort table by Peaz Rating.

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -45,7 +45,7 @@
         <th>Benefits/Notes</th>
         <th>Website Link</th>
         <th>Commute Map</th>
-        <th>Peaz Rating</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(11)')" style="cursor:pointer">Peaz Rating</th>
         <th>Edit App</th>
         <th>Delete App</th>
 
