--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -21,6 +21,7 @@ actual job application with one click.</p>
 <p>Features include:</p>
 <ul>
     <li>Store crucial information (benefits, salary, location, etc.) about each application </li>
+    <li>Utilize our "Peaz Rating" system to compare applications by various factors</li>
     <li>Easily sort applications to allow for further organization</li>
     <li>Quickly add, delete, or edit applications</li>
     <li>Add your address to determine commute times</li>
