--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -24,7 +24,7 @@
 
 
 <form method="post" class="form-horizontal">
-    <div class="col-sm-10 col-sm-offset-1">
+    <div class="col-sm-12 ">
 <table id="userApps" class="table table-hover"  th:each="applist : ${appLists}">
 
 
@@ -33,8 +33,9 @@
 
     <!--TODO: ATTEMPT TO COLOR CODE TABLES BY PHASE?-->
 
-    <thead>
-    <tr th:unless="${applist.isEmpty()}">
+    <thead th:unless="${applist.isEmpty()}">
+    <tr>
+
         <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(1)')" style="cursor:pointer">Position</th>
         <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(2)')" style="cursor:pointer">Company/School</th>
         <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(3)')" style="cursor:pointer">Date</th>
@@ -55,7 +56,7 @@
 
 
     <tbody class="userData">
-    <tr th:each="app : ${applist}" class="item" >
+    <tr th:each="app : ${applist}" class="item">
         <td th:text="${app.name}" ></td>
         <td th:text="${app.company}"></td>
         <td th:text="${app.date}"></td>
@@ -69,9 +70,15 @@
         <td><a th:href="@{'/home/commuteTime/' + ${username} + '/' + ${app.appId}}"
                 class="glyphicon glyphicon-map-marker"></a></td>
 
-        <td th:text="${app.totalRatingPercent()} + '%'" class="progress-bar progress-bar-success progress-bar-striped"
+        <td>
+                <div class="progress">
+                    <div
+                th:text="${app.totalRatingPercent()} + '%'" class="progress-bar progress-bar-success progress-bar-striped"
             role="progressbar" th:aria-valuenow="${app.totalRatingPercent()}"
-            aria-valuemin="0" aria-valuemax="100" th:style="'width:' + ${app.totalRatingPercent()} + '%'"></td>
+            aria-valuemin="0" aria-valuemax="100" th:style="'width:' + ${app.totalRatingPercent()} + '%; color:black;'">
+                </div>
+                </div>
+        </td>
 
         <td><a th:href="@{'/home/editApp/' + ${username} + '/' + ${app.appId}}"
                class="glyphicon glyphicon-edit"></a></td>
