--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -45,7 +45,7 @@
         <th>Benefits/Notes</th>
         <th>Website Link</th>
         <th>Commute Map</th>
-        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(11)')" style="cursor:pointer">Peaz Rating</th>
+        <th onclick="w3.sortHTML('#userApps', '.item', 'td:nth-child(11)')" style="cursor:pointer">Peaz Rating*</th>
         <th>Edit App</th>
         <th>Delete App</th>
 
@@ -91,6 +91,14 @@
 
 
 </table>
+
+
+        <strong><p class="error">*Peaz Rating: Provides simple percentage based on your category ratings when adding an application to the tracker.</p></strong>
+        <ul>
+    <li><strong>100%</strong> = Your dream job/school! Perfect rating with great benefits, positions, salary, etc.</li>
+            <li><strong>Less than 30%</strong> = Bad match. You are not that into this job/school.</li>
+    <li><strong>0%</strong> = Rating system not applicable. Job/school does not require a rating (you put all zeros when adding the app).</li>
+    </ul>
     </div>
 
 
