Cookie correctly set when logging in and removed when logging out.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/register"><span class="glyphicon glyphicon-user"></span>Register</a></li>
             <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li><a href="/logoutPage"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
 </nav>
@@ -42,7 +42,7 @@
                 <span class="glyphicon glyphicon-plus"></span>Add App</a></li>
             <li><a th:href="@{'/home/info/'+ ${username}}">
             <span class="glyphicon glyphicon-user"></span>User Info</a></li>
-            <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li><a href="/logoutPage"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
 </nav>
