Finished cookies...Correctly allows user to navigate after logging in or registering. Secured endpoints finally w/ cookie management!

--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -92,13 +92,14 @@
 
 </table>
 
-
+    <div th:if="${appLists} and ${appLists.size()}">
         <strong><p class="error">*Peaz Rating: Provides simple percentage based on your category ratings when adding an application to the tracker.</p></strong>
         <ul>
     <li><strong>100%</strong> = Your dream job/school! Perfect rating with great benefits, positions, salary, etc.</li>
             <li><strong>Less than 30%</strong> = Bad match. You are not that into this job/school.</li>
     <li><strong>0%</strong> = Rating system not applicable. Job/school does not require a rating (you put all zeros when adding the app).</li>
     </ul>
+    </div>
     </div>
 
 
