Added Peaz Rating instructions to editApp.

--- a/src/main/resources/templates/User/addApp.html
+++ b/src/main/resources/templates/User/addApp.html
@@ -191,7 +191,7 @@
 
 
     <br />
-    <div class="col-sm-offset-1">
+    <div class="col-sm-offset-1" th:fragment="peazRating">
     <strong><p class="error">*Peaz Ratings: Used to provide a simple percentage that reflects how much you like this job/school.</p></strong>
     <ul>
         <li><strong>10 = Perfect rating!</strong> Example: The benefits of this job are incredible!</li>
