--- a/src/main/resources/templates/User/editApp.html
+++ b/src/main/resources/templates/User/editApp.html
@@ -17,6 +17,9 @@
     <div th:replace="User/addApp :: appForm">
 
     </div>
+    <br/>
+
+    <div th:replace="User/addApp :: peazRating"></div>
 
 
     <br />
