--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,6 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/register"><span class="glyphicon glyphicon-user"></span>Register</a></li>
             <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li><a href="/logoutPage"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
 </nav>
@@ -32,7 +31,7 @@
 <nav class="navbar navbar-inverse" th:fragment="user-navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Appeaz</a>
+            <a class="navbar-brand" th:href="@{'/home/'+${username}}">Appeaz</a>
         </div>
 
         <ul class="nav navbar-nav navbar-right">
